--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -14,14 +16,14 @@
             <p>Sistema de Gerenciamento de Pacientes</p>
         </header>
 
-        <nav class="tabs">
+        <!-- <nav class="tabs">
             <button class="tab-button active" onclick="showTab('patients')">
                 <i class="fas fa-users"></i> Pacientes
             </button>
             <button class="tab-button" onclick="showTab('add-patient')">
                 <i class="fas fa-user-plus"></i> Adicionar Paciente
             </button>
-        </nav>
+        </nav> -->
 
         <!-- Patients List Tab -->
         <div id="patients" class="tab-content active">
@@ -30,8 +32,11 @@
                 <button onclick="loadPatients()" class="btn btn-secondary">
                     <i class="fas fa-sync"></i> Atualizar
                 </button>
+                <button onclick="openAddPatientModal()" class="btn add-patient-btn">
+                    <i class="fas fa-plus"></i> Adicionar Paciente
+                </button>
             </div>
-            
+
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Buscar paciente..." onkeyup="filterPatients()">
                 <i class="fas fa-search"></i>
@@ -46,59 +51,61 @@
             </div>
         </div>
 
-        <!-- Add Patient Tab -->
-        <div id="add-patient" class="tab-content">
-            <div class="section-header">
-                <h2>Adicionar Novo Paciente</h2>
+        <div id="add-patient-modal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>Adicionar Novo Paciente</h3>
+                    <span class="close" onclick="closeAddPatientModal()">&times;</span>
+                </div>
+
+                <form id="patient-form" class="patient-form">
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="nome">Nome Completo *</label>
+                            <input type="text" id="nome" name="nome" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="cpf">CPF *</label>
+                            <input type="text" id="cpf" name="cpf" required placeholder="000.000.000-00">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="telefone">Telefone</label>
+                            <input type="text" id="telefone" name="telefone" placeholder="(00) 00000-0000">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="data_nascimento">Data de Nascimento *</label>
+                            <input type="date" id="data_nascimento" name="data_nascimento" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="id_convenio">ID do Convênio</label>
+                            <input type="number" id="id_convenio" name="id_convenio" placeholder="Opcional">
+                        </div>
+
+                        <div class="form-group full-width">
+                            <label for="endereco">Endereço</label>
+                            <textarea id="endereco" name="endereco" rows="3"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-save"></i> Salvar Paciente
+                        </button>
+                        <button type="button" onclick="resetForm()" class="btn btn-secondary">
+                            <i class="fas fa-times"></i> Limpar
+                        </button>
+                    </div>
+                </form>
             </div>
-
-            <form id="patient-form" class="patient-form">
-                <div class="form-grid">
-                    <div class="form-group">
-                        <label for="nome">Nome Completo *</label>
-                        <input type="text" id="nome" name="nome" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="cpf">CPF *</label>
-                        <input type="text" id="cpf" name="cpf" required placeholder="000.000.000-00">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="telefone">Telefone</label>
-                        <input type="text" id="telefone" name="telefone" placeholder="(00) 00000-0000">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="data_nascimento">Data de Nascimento *</label>
-                        <input type="date" id="data_nascimento" name="data_nascimento" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="id_convenio">ID do Convênio</label>
-                        <input type="number" id="id_convenio" name="id_convenio" placeholder="Opcional">
-                    </div>
-
-                    <div class="form-group full-width">
-                        <label for="endereco">Endereço</label>
-                        <textarea id="endereco" name="endereco" rows="3"></textarea>
-                    </div>
-                </div>
-
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fas fa-save"></i> Salvar Paciente
-                    </button>
-                    <button type="button" onclick="resetForm()" class="btn btn-secondary">
-                        <i class="fas fa-times"></i> Limpar
-                    </button>
-                </div>
-            </form>
         </div>
 
         <!-- Edit Patient Modal -->
@@ -167,4 +174,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
