--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica Médica - Sistema de Gerenciamento</title>
+    <title>Saúde Boa Forma - Sistema de Gerenciamento</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-heartbeat"></i> Clínica Médica</h1>
+            <h1><i class="fas fa-heartbeat"></i> Saúde Boa Forma</h1>
             <p>Sistema de Gerenciamento de Pacientes</p>
         </header>
 
